[gd_scene load_steps=27 format=3 uid="uid://bemrexjk87nwp"]

[ext_resource type="Texture2D" uid="uid://b3hfjqlngs20b" path="res://Enemies/Bat.png" id="1_bbi7m"]
[ext_resource type="Script" path="res://Enemies/bat.gd" id="1_h74co"]
[ext_resource type="Texture2D" uid="uid://caoxfc8er1rxb" path="res://Shadows/SmallShadow.png" id="2_0crrl"]
[ext_resource type="Shader" path="res://Player/player.gdshader" id="2_wjjhj"]
[ext_resource type="PackedScene" uid="uid://buha6yg3maok8" path="res://Hitboxes and Hurtboxes/hurtbox.tscn" id="4_56gwd"]
[ext_resource type="PackedScene" uid="uid://cgpy3wqc4bqv" path="res://stats.tscn" id="5_o36n3"]
[ext_resource type="PackedScene" uid="uid://dltba844upjgp" path="res://Enemies/player_detection_zone.tscn" id="6_3o01v"]
[ext_resource type="PackedScene" uid="uid://bw62oxve0tgg5" path="res://Hitboxes and Hurtboxes/hitbox.tscn" id="7_bqw5c"]
[ext_resource type="PackedScene" uid="uid://b7n1a64cwqnb8" path="res://Hitboxes and Hurtboxes/soft_collision.tscn" id="8_bm7pf"]
[ext_resource type="PackedScene" uid="uid://btaawesanj1t3" path="res://Enemies/wander_controller.tscn" id="9_ev7ul"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lkewp"]
resource_local_to_scene = true
shader = ExtResource("2_wjjhj")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_prewx"]
atlas = ExtResource("1_bbi7m")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyf10"]
atlas = ExtResource("1_bbi7m")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7420y"]
atlas = ExtResource("1_bbi7m")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_72p0k"]
atlas = ExtResource("1_bbi7m")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqeyb"]
atlas = ExtResource("1_bbi7m")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_2olnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prewx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyf10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7420y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72p0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqeyb")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e5p1u"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjtqy"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tfbrt"]
radius = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bkkgt"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ume0r"]
radius = 6.0

[sub_resource type="Animation" id="Animation_hxeux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5inf4"]
resource_name = "start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_4jrhx"]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wv2f"]
_data = {
"RESET": SubResource("Animation_hxeux"),
"start": SubResource("Animation_5inf4"),
"stop": SubResource("Animation_4jrhx")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_h74co")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lkewp")
sprite_frames = SubResource("SpriteFrames_2olnn")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.681864
offset = Vector2(0, -12)

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("2_0crrl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e5p1u")

[node name="Hurtbox" parent="." instance=ExtResource("4_56gwd")]
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_cjtqy")

[node name="Stats" parent="." instance=ExtResource("5_o36n3")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_3o01v")]
collision_layer = 0

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 0.141176, 0.388235)
shape = SubResource("CircleShape2D_tfbrt")

[node name="Hitbox" parent="." instance=ExtResource("7_bqw5c")]
collision_layer = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_bkkgt")

[node name="SoftCollision" parent="." instance=ExtResource("8_bm7pf")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_ume0r")

[node name="WanderController" parent="." instance=ExtResource("9_ev7ul")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wv2f")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
